--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>slider project</h1>
+    <div class="slider-container">
+      <div class="slide">
+        <img src="./img-1.jpeg" alt="img1" class="slide-img" />
+        <h1>1</h1>
+      </div>
+      <div class="slide">
+        <h1>2</h1>
+      </div>
+      <div class="slide">
+        <h1>3</h1>
+      </div>
+      <div class="slide">
+        <div>
+          <img src="./person-1.jpeg" alt="person-1" class="person-img" />
+          <h4>Susan doe</h4>
+        </div>
+        <h1>4</h1>
+      </div>
+    </div>
+    <div class="btn-container">
+      <button type="button" class="prevBtn">Prev</button>
+      <button type="button" class="nextBtn">Next</button>
+    </div>
 
     <!-- javascript -->
     <script src="app.js"></script>
